KPBOS requested changes

--- a/public/admin/pages/tables/data.html
+++ b/public/admin/pages/tables/data.html
@@ -883,49 +883,49 @@
                   <td>C</td>
                 </tr>
                 <tr>
-                  <td>Misc</td>
+                  <td>Miscellaneous</td>
                   <td>NetFront 3.1</td>
                   <td>Embedded devices</td>
                   <td>-</td>
                   <td>C</td>
                 </tr>
                 <tr>
-                  <td>Misc</td>
+                  <td>Miscellaneous</td>
                   <td>NetFront 3.4</td>
                   <td>Embedded devices</td>
                   <td>-</td>
                   <td>A</td>
                 </tr>
                 <tr>
-                  <td>Misc</td>
+                  <td>Miscellaneous</td>
                   <td>Dillo 0.8</td>
                   <td>Embedded devices</td>
                   <td>-</td>
                   <td>X</td>
                 </tr>
                 <tr>
-                  <td>Misc</td>
+                  <td>Miscellaneous</td>
                   <td>Links</td>
                   <td>Text only</td>
                   <td>-</td>
                   <td>X</td>
                 </tr>
                 <tr>
-                  <td>Misc</td>
+                  <td>Miscellaneous</td>
                   <td>Lynx</td>
                   <td>Text only</td>
                   <td>-</td>
                   <td>X</td>
                 </tr>
                 <tr>
-                  <td>Misc</td>
+                  <td>Miscellaneous</td>
                   <td>IE Mobile</td>
                   <td>Windows Mobile 6</td>
                   <td>-</td>
                   <td>C</td>
                 </tr>
                 <tr>
-                  <td>Misc</td>
+                  <td>Miscellaneous</td>
                   <td>PSP browser</td>
                   <td>PSP</td>
                   <td>-</td>
@@ -1323,49 +1323,49 @@
                   <td>C</td>
                 </tr>
                 <tr>
-                  <td>Misc</td>
+                  <td>Miscellaneous</td>
                   <td>NetFront 3.1</td>
                   <td>Embedded devices</td>
                   <td>-</td>
                   <td>C</td>
                 </tr>
                 <tr>
-                  <td>Misc</td>
+                  <td>Miscellaneous</td>
                   <td>NetFront 3.4</td>
                   <td>Embedded devices</td>
                   <td>-</td>
                   <td>A</td>
                 </tr>
                 <tr>
-                  <td>Misc</td>
+                  <td>Miscellaneous</td>
                   <td>Dillo 0.8</td>
                   <td>Embedded devices</td>
                   <td>-</td>
                   <td>X</td>
                 </tr>
                 <tr>
-                  <td>Misc</td>
+                  <td>Miscellaneous</td>
                   <td>Links</td>
                   <td>Text only</td>
                   <td>-</td>
                   <td>X</td>
                 </tr>
                 <tr>
-                  <td>Misc</td>
+                  <td>Miscellaneous</td>
                   <td>Lynx</td>
                   <td>Text only</td>
                   <td>-</td>
                   <td>X</td>
                 </tr>
                 <tr>
-                  <td>Misc</td>
+                  <td>Miscellaneous</td>
                   <td>IE Mobile</td>
                   <td>Windows Mobile 6</td>
                   <td>-</td>
                   <td>C</td>
                 </tr>
                 <tr>
-                  <td>Misc</td>
+                  <td>Miscellaneous</td>
                   <td>PSP browser</td>
                   <td>PSP</td>
                   <td>-</td>
